# gestalt-game-engine

./: .gitignore  README.md  main.py  pyproject.toml  ruff.toml
src/: main.py
src/assets/jsons/: small_room.json  test_room.json
src/core/: error.py  event.py  game.py  loop.py  scene_manager.py  settings.py
src/nodes/: base_node.py
src/nodes/scenes/gameplay/: gameplay.py
src/nodes/scenes/gameplay/definitions/: tiled_map_dto.py
src/nodes/scenes/test/: test.py
src/utils/: write.py
